# ant

./: .gitignore  CMakeLists.txt  README.md
examples/: 01_basic_usage.cpp  02_observer_pattern.cpp  03_event_system.cpp  CMakeLists.txt
src/: signal.hpp
tests/: CMakeLists.txt  test_auto_disconnect.cpp  test_connection.cpp  test_functional.cpp  test_signal.cpp
